--- a/learn-certs-pr/exams/mb6-894.yml
+++ b/learn-certs-pr/exams/mb6-894.yml
@@ -14,7 +14,7 @@ summary: |-
 
   Kandidaten für dieses Entwicklungsexamen sollten ein moderates Verständnis für Programmierkonzepte und -prozesse sowie ein Verständnis für Änderungen und Verbesserungen im Bereich Finanzen und Handel sowie für neue Entwicklungsprojekte haben, die für die verschiedenen Geschäftsprozessszenarien gelten.
 
-  <div style='font-weight&#58; bold;'><br/>Am 4. Februar 2020 wurde der Inhalt dieses Examens aktualisiert. Laden Sie den Änderungsbeleg für Prüfung Nr MB6-894 herunter und lesen Sie ihn durch, um mehr über diese Änderungen und deren Auswirkungen auf die Kompetenzbemessung zu erfahren.</div>
+  <div><strong><br/>Am 4. Februar 2020 wurde der Inhalt dieses Examens aktualisiert. Laden Sie den Änderungsbeleg für Prüfung Nr MB6-894 herunter und lesen Sie ihn durch, um mehr über diese Änderungen und deren Auswirkungen auf die Kompetenzbemessung zu erfahren.</strong></div>
 subTitle: Kandidaten für diese Prüfung sind technische Berater, Programmierer oder IT-Mitarbeiter, die grundlegenden technischen und entwicklungstechnischen Aufgaben durchführen, die für die Anpassung von Microsoft Dynamics 365 Finanzen und Microsoft Dynamics 365 Commerce.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4oaj7
