--- a/learn-certs-pr/windows-virtual-desktop-specialty/index.yml
+++ b/learn-certs-pr/windows-virtual-desktop-specialty/index.yml
@@ -47,7 +47,7 @@ products:
 - office-teams
 - azure-monitor
 - azure-advisor
-- windows-virtual-desktop
+- azure-virtual-desktop
 courses:
 - uid: course.az-140t00
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4MFTM
