loc update fixes

--- a/learn-certs-pr/courses/md-100t00.yml
+++ b/learn-certs-pr/courses/md-100t00.yml
@@ -192,9 +192,81 @@ outlineSection: |-
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - Beschreiben der Optionen und Vorteile von lokalem, Cloud- und virtuellem Speicher.
-  - OneDrive konfigurieren.
   - Lokale Festplattenpartitionen und Volumen konfigurieren.
   - Die Fähigkeiten und Vorteile von Speicherplätzen beschreiben.
+
+  ### Modul 7: Konfigurieren von Datenzugang und Nutzung
+
+  In diesem Modul lernen die Teilnehmer etwas über Berechtigungen. In diesem Modul werden Überlegungen zu verschiedenen Dateisystemen angestellt. Die Teilnehmer lernen, wie sie Datei- und Ordnerberechtigungen sowie freigegebene Ordner konfigurieren können. Die Teilnehmer erlernen auch die Konfiguration von Einstellungen mit Hilfe von Methoden wie lokalen und Gruppenrichtlinien. Das Modul wird mit der Konfiguration von OneDrive und Arbeitsordnern abgeschlossen.
+
+  #### Lektionen
+
+  * Überblick über Dateisysteme
+
+  * Konfigurieren und Verwalten des Dateizugriffs
+
+  * Konfigurieren und Verwalten von freigegebenen Ordnern
+
+  * Verwaltung von Benutzerdateien
+
+
+  #### Lab : Konfigurieren und Verwalten von Berechtigungen und Freigaben
+
+  ####
+
+  #### Lab : Verwendung von Bedingungen zur Kontrolle des Zugriffs und effektiver Berechtigungen
+
+  ####
+
+  #### Lab : Arbeitsmappen
+
+  ####
+
+  #### Lab : Synchronisieren von Dateien mit OneDrive
+
+  ####
+
+  Nach Abschluss dieses Moduls werden die Teilnehmer zu Folgendem in der Lage sein:
+
+  *   Die Unterschiede und Vorteile der unterstützten Dateisysteme zu beschreiben.
+
+  *   Datei- und Ordnerberechtigungen zu konfigurieren.
+
+  *   Gemeinsame Ordner zu konfigurieren.
+
+  *   Sichern von Windows durch lokale Richtlinieneinstellungen.
+
+
+  ### Modul 8: Verwalten von Apps in Windows 10
+
+  In diesem Modul erhalten die Teilnehmer eine Einführung in das App-Management in Windows 10. In diesem Modul werden die verschiedenen Arten von Anwendungen und die unterstützten Installationsmethoden behandelt. Die Teilnehmer lernen, wie man Apps mit manuellen und automatisierten Methoden installiert und wie man die App-Bereitstellung mit dem Windows Storeverwaltet. Schließlich werden in diesem Modul die Unterschiede zwischen Internet Explorer und Microsoft Edge abgedeckt.
+
+  #### Lektionen
+
+  *   Apps an Benutzer bereitstellen
+
+  *   Verwalten von Universal Windows Apps
+
+  *   Web Browsers in Windows 10
+
+
+  #### Lab : Konfigurieren von Microsoft Edge zur Unterstützung des Internet Explorer Enterprise Modus
+
+  ####
+
+  #### Lab : Installation von Apps in Windows 10
+
+  ####
+
+  Nach Nach Abschluss dieses Moduls werden die Teilnehmer zu Folgendem in der Lage sein:
+
+  *   Die verschiedenen Arten von Anwendungen zu beschreiben.
+
+  *   Anwendungen manuell und mit automatischen Methoden zu installieren.
+
+  *   Verwalten von Anwendungsbereitstellung mit dem Windows Store.
+
+  *   Erfahren Sie mehr über WebBrowser-Funktionen in Windows 10.
 
 
   ### Modul 9: Konfigurieren von Bedrohungsschutz und erweiterter Sicherheit
