commit translated contents

--- a/learn-certs-pr/browse/index.yml
+++ b/learn-certs-pr/browse/index.yml
@@ -1,4 +1,13 @@
 ### YamlMime:ContentBrowser
-title: Zertifizierung und Prüfungen durchsuchen
+metadata:
+  ms.topic: hub-page
+  ms.prod: non-product-specific
+  ms.openlocfilehash: 443151c63faf5bc5c3184db41d30e4c2c52f66dd
+  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/14/2021
+  ms.locfileid: "132110882"
+title: Browse Certifications and Exams [Zertifizierung und Prüfungen durchsuchen]
 browseType: certification
-summary: Lernen Sie neue Fähigkeiten, um Ihre Produktivität zu steigern und Ihrem Unternehmen zu ermöglichen, mit Microsoft-Zertifizierungen mehr zu erreichen.
+summary: Lernen Sie neue Fähigkeiten, um Ihre Produktivität zu steigern und Ihrem Unternehmen zu ermöglichen, mit Microsoft Certifications mehr zu erreichen.
