--- a/learn-certs-pr/courses/browse/index.yml
+++ b/learn-certs-pr/courses/browse/index.yml
@@ -3,6 +3,14 @@ title: Durchsuchen Sie Kurse mit Kursleitern
 metadata:
   title: Durchsuchen Sie Kurse mit Kursleitern - Lernen | Microsoft Docs
   description: Wählen Sie eine traditionelle Schulungsumgebung im Klassenzimmer oder Online-Videos, um nach Ihrem eigenen Zeitplan, in Ihrem eigenen Tempo und an Ihrem eigenen Ort zu lernen.
+  ms.topic: hub-page
+  ms.prod: non-product-specific
+  ms.openlocfilehash: 5998a92dee6413f5d41e656157a305f715a80bb2
+  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/14/2021
+  ms.locfileid: "132107554"
 browseType: course
 summary: Wählen Sie eine traditionelle Schulungsumgebung im Klassenzimmer oder Online-Videos, um nach Ihrem eigenen Zeitplan, in Ihrem eigenen Tempo und an Ihrem eigenen Ort zu lernen.
 searchText: Suchen Sie nach Kursnummer, Titel oder zugehöriger Prüfungsnummer
