commit translated contents

--- a/learn-certs-pr/roles/ai-engineer.yml
+++ b/learn-certs-pr/roles/ai-engineer.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Role
-title: KI-Techniker
+title: KI-Entwickler
 metadata:
-  title: KI-Techniker
-  description: AI Engineer (KI-Ingenieure) nutzen Cognitive Services, maschinelles Lernen und Wissensmanagement, um Microsoft KI-Lösungen zu entwickeln und zu implementieren.
-  ms.openlocfilehash: 2ba8117ba7e64fd54cb6d9876872dd7aaf176461
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
+  title: KI-Entwickler
+  description: KI-Entwickler nutzen Cognitive Services, maschinelles Lernen und Wissensmanagement, um Microsoft KI-Lösungen zu entwickeln und zu implementieren.
+  ms.openlocfilehash: 00dd46c77633984525214a975daf2e2d6e306489
+  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132111434"
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133079546"
 uid: role.ai-engineer
 summary: >
-  AI Engineer (KI-Ingenieure) nutzen Cognitive Services, maschinelles Lernen und Wissensmanagement, um Microsoft KI-Lösungen zu entwickeln und zu implementieren.
-subTitle: AI Engineer (KI-Ingenieure) nutzen Cognitive Services, maschinelles Lernen und Wissensmanagement, um Microsoft KI-Lösungen zu entwickeln und zu implementieren.
+  KI-Entwickler nutzen Cognitive Services, maschinelles Lernen und Wissensmanagement, um Microsoft KI-Lösungen zu entwickeln und zu implementieren.
+subTitle: KI-Entwickler nutzen Cognitive Services, maschinelles Lernen und Wissensmanagement, um Microsoft KI-Lösungen zu entwickeln und zu implementieren.
 certificationPaths:
-- title: Azure AI Engineer
-  linkedInKeywords: Azure AI Engineer
+- title: Azure-KI-Entwickler
+  linkedInKeywords: Azure AI engineer
   uid: certification-path.azure-ai-engineer
   prerequisites:
   - uid: certification.azure-fundamentals
