--- a/learn-certs-pr/roles/data-scientist.yml
+++ b/learn-certs-pr/roles/data-scientist.yml
@@ -3,19 +3,19 @@ title: Data Scientist
 metadata:
   title: Data Scientist
   description: Data Scientists (Datenwissenschaftler) wenden Methoden des maschinellen Lernens an, um Modelle zur Lösung von Geschäftsproblemen zu entwickeln, zu bewerten und einzusetzen.
-  ms.openlocfilehash: acce0563f14601d3dcdd5424da729fbff3a8be91
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
+  ms.openlocfilehash: 3ce6e5dbb3b54a7c78e711061cfc3cbfc0d26ed6
+  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132112045"
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133078710"
 uid: role.data-scientist
 summary: >
   Data Scientists (Datenwissenschaftler) wenden Methoden des maschinellen Lernens an, um Modelle zur Lösung von Geschäftsproblemen zu entwickeln, zu bewerten und einzusetzen.
 subTitle: Data Scientists (Datenwissenschaftler) wenden Methoden des maschinellen Lernens an, um Modelle zur Lösung von Geschäftsproblemen zu entwickeln, zu bewerten und einzusetzen.
 certificationPaths:
-- title: Azure Data Scientist
-  linkedInKeywords: Azure Data Scientist
+- title: Azure-Datenwissenschaftler
+  linkedInKeywords: Azure data scientist
   uid: certification-path.azure-data-scientist
   prerequisites:
   - uid: certification.azure-fundamentals
