--- a/learn-certs-pr/roles/devops-engineer.yml
+++ b/learn-certs-pr/roles/devops-engineer.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Role
-title: DevOps-Techniker
+title: DevOps-Entwickler
 metadata:
-  title: DevOps-Techniker
-  description: DevOps Engineer (DevOps-Techniker) kombinieren Menschen, Prozesse und Technologien, und stellen kontinuierlich wertvolle Produkte und Dienstleistungen bereit, die den Bedürfnissen der Endverbraucher und den Unternehmenszielen entsprechen.
-  ms.openlocfilehash: dfd538b92e6e6796cd9ded07ec3b04582300436d
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
+  title: DevOps-Entwickler
+  description: DevOps-Entwickler kombinieren Menschen, Prozesse und Technologien, und stellen kontinuierlich wertvolle Produkte und Dienstleistungen bereit, die den Bedürfnissen der Endverbraucher und den Unternehmenszielen entsprechen.
+  ms.openlocfilehash: 38e89137145de8d9010332bd7adc68a5a5eecc09
+  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132112032"
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133079468"
 uid: role.devops-engineer
 summary: >
-  DevOps Engineer (DevOps-Techniker) kombinieren Menschen, Prozesse und Technologien, und stellen kontinuierlich wertvolle Produkte und Dienstleistungen bereit, die den Bedürfnissen der Endverbraucher und den Unternehmenszielen entsprechen.
-subTitle: DevOps Engineer (DevOps-Techniker) kombinieren Menschen, Prozesse und Technologien, und stellen kontinuierlich wertvolle Produkte und Dienstleistungen bereit, die den Bedürfnissen der Endverbraucher und den Unternehmenszielen entsprechen.
+  DevOps-Entwickler kombinieren Menschen, Prozesse und Technologien, und stellen kontinuierlich wertvolle Produkte und Dienstleistungen bereit, die den Bedürfnissen der Endverbraucher und den Unternehmenszielen entsprechen.
+subTitle: DevOps-Entwickler kombinieren Menschen, Prozesse und Technologien, und stellen kontinuierlich wertvolle Produkte und Dienstleistungen bereit, die den Bedürfnissen der Endverbraucher und den Unternehmenszielen entsprechen.
 certificationPaths:
-- title: DevOps-Techniker
-  linkedInKeywords: DevOps Engineer
+- title: DevOps-Entwickler
+  linkedInKeywords: DevOps engineer
   uid: certification-path.devops-engineer
   prerequisites:
   - uid: certification.azure-fundamentals
